# libraries-repository-engine

./: .codespellrc  .ecrc  .flake8  .gitignore  .prettierignore  README.md  Taskfile.yml  config.json.example  extract_library_from_issue.sh  fmt_fix_vet  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml  repos.txt.example  sync_libraries.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: check-general-formatting-task.yml  check-go-dependencies-task.yml  check-go-task.yml  check-go.yml  check-license.yml  check-markdown-task.yml  check-prettier-formatting-task.yml  check-python-task.yml  check-taskfiles.yml  check-yaml-task.yml  compare-performance.yml  publish-go-tester-task.yml  release.yml  spell-check-task.yml  sync-labels-npm.yml  sync-labels.yml  test-go-integration-task.yml  test-go-task.yml  test-go.yml  test-integration.yml
internal/backup/: backup.go  backup_test.go
internal/cli/: check-registry.go  modify.go  remove.go  root.go  sync.go
internal/configuration/: configuration.go
internal/feedback/: feedback.go
internal/libraries/: lint.go  (+8 more)
libraries/: bad_file_cleaner.go  bad_file_cleaner_test.go  clamav.go  git_integration_test.go  github_release_downloader.go  github_release_downloader_test.go  lint.go  lint_test.go  repoarchive.go  repoclone.go  repoclone_test.go  repolist.go  repolist_test.go
src/: .gitignore
test/: __init__.py  conftest.py  test_all.py  test_modify.py  test_remove.py  test_sync.py
tests/: conftest.py  test_modify.py  test_sync.py
(+177 files in other folders)
