[tool.black]
line-length = 120

[tool.poetry]
name = "libraries-repository-engine"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^24.2"
codespell = "^2.2.6"
flake8 = "^7.0.0"
invoke = "^2.2.0"
pep8-naming = "^0.13.3"
pytest = "^8.1.1"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
