[tool.black]
line-length = 120

[tool.poetry]
name = "libraries-repository-engine"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^24.8"
codespell = "^2.3.0"
flake8 = "^7.1.0"
invoke = "^2.2.0"
pep8-naming = "^0.14.1"
pytest = "^8.3.2"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
