[tool.black]
line-length = 120

[tool.poetry]
name = "libraries-repository-engine"
version = "0.0.0"
description = ""
authors = ["Arduino <info@arduino.cc>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^25.9"
codespell = "^2.4.1"
flake8 = "^7.3.0"
invoke = "^2.2.1"
pep8-naming = "^0.15.1"
pytest = "^8.4.2"
yamllint = "^1.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
